--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,8 @@
         <div class="main">
             <div class="center">
                 <div class="left">
-                    <img src="../static/images/left.jpg" alt="">
+                    <img src="../static/images/left.jpg" alt="" id="image">
+                    <div class="right-border"></div>
                 </div>
                 <div class="right">
                     <div class="in-left">
