--- a/static/css/index.css
+++ b/static/css/index.css
@@ -38,14 +38,24 @@ div.main div.center {
 }
 div.main div.center > div.left {
   height: 100%;
-  width: 30%;
+  width: 35%;
+  position: relative;
+}
+div.main div.center > div.left div.right-border {
+  position: absolute;
+  width: 4px;
+  height: 0;
+  background-color: red;
+  right: 0;
+  transition: 5s;
+  top: 0;
 }
 div.main div.center > div.left img {
   width: 100%;
   height: 100%;
 }
 div.main div.center > div.right {
-  width: 70%;
+  width: 65%;
   height: 100%;
   display: flex;
 }
