--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -43,15 +43,25 @@ div.main{
 
         >div.left{
             height: 100%;
-            width: 30%;
-            // border: 4px solid red;
+            width: 35%;
+            // border-right: 4px solid red;
+            position: relative;
+            div.right-border{
+                position: absolute;
+                width: 4px;
+                height: 0;
+                background-color: red;
+                right: 0;
+                transition: 5s;
+                top: 0;
+            }
             img{
                 width: 100%;
                 height: 100%;
             }
         }
         >div.right{
-            width: 70%;
+            width: 65%;
             height: 100%;
             display: flex;
             >*{
