--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -3,8 +3,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow: hidden;
-    // font-family: Arial, Helvetica, sans-serif;
     font-family: 'Raleway',sans-serif;
 }
 
@@ -20,7 +18,6 @@ header{
     }
     >div.title{
         display: flex;
-        // align-items: center;
         justify-content: center;
         flex-direction: column;
         position: absolute;
@@ -44,26 +41,49 @@ div.main{
         >div.left{
             height: 100%;
             width: 35%;
-            // border-right: 4px solid red;
             position: relative;
+            div.new{
+                position: absolute;
+                z-index: 3;
+                // font-size: 30px;
+                top: 100px;
+                left: 100px;
+                color: rgb(200, 200, 200);
+                *{
+                    margin: 10px;
+                }
+            }
             div.right-border{
                 position: absolute;
+                z-index: 2;
                 width: 4px;
                 height: 0;
                 background-color: red;
                 right: 0;
-                transition: 5s;
+                transition: 2.5s;
                 top: 0;
             }
             img{
                 width: 100%;
                 height: 100%;
             }
+            >.image{
+                position: absolute;
+                transition: 2s;
+            }
+            .img1{
+                // z-index: 1;
+            }
+            .img2{
+                // z-index: -1;
+            }
         }
         >div.right{
             width: 65%;
             height: 100%;
             display: flex;
+            background-color: white;
+            z-index: 2;
             >*{
                 width: 80%;
                 display: flex;
