--- a/templates/index.html
+++ b/templates/index.html
@@ -9,18 +9,23 @@
         <title>Document</title>
     </head>
     <body>
-        <!-- <header>
-            <img src="" alt="">
+        <header>
+            <img src="../static/images/carusel.jpg" alt="">
             <div class="title">
                 <h4>MUSE</h4>
                 <p>DESING AND INTERIOR</p>
             </div>
-        </header> -->
+        </header>
 
         <div class="main">
             <div class="center">
                 <div class="left">
-                    <img src="../static/images/left.jpg" alt="" id="image">
+                    <img src="../static/images/left.jpg" alt="" class="image img1">
+                    <img src="../static/images/left2.jpg" alt="" class="image img2">
+                    <div class="new">
+                        <h1>NEW EVENS</h1>
+                        <p>Extra ordinary project</p>
+                    </div>
                     <div class="right-border"></div>
                 </div>
                 <div class="right">
